--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -40,3 +40,7 @@
 [[constraint]]
   name = "gopkg.in/cheggaaa/pb.v1"
   version = "1.0.25"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/anacrolix/torrent"
