Fixed --force to remove old chains
Added --data-dir to specify chain location

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -44,3 +44,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/anacrolix/torrent"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/mitchellh/go-homedir"
